--- a/client/style.css
+++ b/client/style.css
@@ -37,11 +37,15 @@ a {
 
 
 .spinner {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+
   width: 40px;
   height: 40px;
-  background-color: #333;
+  background-color: #666;
 
-  margin: 100px auto;
+  /*margin: 100px auto;*/
   -webkit-animation: sk-rotateplane 1.2s infinite ease-in-out;
   animation: sk-rotateplane 1.2s infinite ease-in-out;
 }
