--- a/client/style.css
+++ b/client/style.css
@@ -1,17 +1,19 @@
 .table-header-rotated {
   border-collapse: collapse;
-  font-size: 80%;
+  font-size: 50%;
+  position: relative;
+  top: -50px;
 }
 .table-header-rotated td {
   width: 20px;
 }
 .table-header-rotated th {
-  padding: 5px 10px;
+  padding: 2px 8px;
 }
 .table-header-rotated td {
   text-align: center;
   padding: 10px 5px;
-  border: 1px solid rgba(0, 0, 0, 0.05);;
+  border: 1px solid rgba(175, 175, 175, 1);
 }
 .table-header-rotated th.rotate {
   height: 140px;
@@ -29,6 +31,10 @@
 .table-header-rotated th.row-header {
   padding: 0 10px;
   border-bottom: 1px solid #ccc;
+}
+.table-header-rotated tbody th.row-header {
+  text-align: right;
+  padding-right: 20px;
 }
 
 a {
