--- a/client/style.css
+++ b/client/style.css
@@ -74,3 +74,28 @@ a {
     -webkit-transform: perspective(120px) rotateX(-180deg) rotateY(-179.9deg);
   }
 }
+
+.rank-a {
+  background-color: rgba(78,137,97,1);
+  color: white;
+}
+
+.rank-b {
+  background-color: rgba(78,137,97,0.4);
+  color: #f4f4f4;
+}
+
+.rank-c {
+  background-color: rgb(51, 51, 51);
+  color: #f4f4f4;
+}
+
+.rank-d {
+  background-color: rgba(128,15,37,0.4);
+  color: #f4f4f4;
+}
+
+.rank-f {
+  background-color: rgba(128,15,37,1);
+  color: white;
+}
