--- a/client/style.css
+++ b/client/style.css
@@ -113,3 +113,12 @@ a.selected {
   background-color: rgba(128,15,37,1);
   color: white;
 }
+
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 100;
+}
